--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <img src="folder/1.png"/>
         </header>
         <main>
-            <img class="first-img" src=folder/2.png"/>
+            <img class="first-img" src="folder/2.png"/>
             <section class="first-section">
                 <article class="first-section-text">
                     <h1>Tank Team DLC Full Version</h1>
